fix: align mobile navigation

--- a/css/style.css
+++ b/css/style.css
@@ -345,7 +345,7 @@ a.icon {
     z-index: 1;
     width: 100%;
     display: none;
-    top: 55px;
+    top: 60px;
   }
   header nav ul {
     display: block;
